made changes to website content and style

--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/style.css" />
-    <title>YOUR NAME</title>
+    <title>Anthony Squillacioti</title>
     <meta name="description" content="some desc">
   </head>
 
   <body>
     <header class="main-header">
       <br>
-      <h1 class="my-name my-name-large">YOUR NAME</h1>
+      <h1 class="my-name my-name-large">Anthony Squillacioti</h1>
     </header>
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="assets/profile.png" height="200" width="200">
+      <img class="about-prof-image" src="assets/headshot_image.jpg" height="200" width="200">
       <p>
-        Introduce Yourself
+
+        Hello and welcome!! I'm Anthony, a third-year CS major at the University of Maryland.
       </p>
 
       <p>
-        Relevant Info
+        I'm actively looking for work as a UX designer! My focus lies in empathic designs with a touch of finesse.
       </p>
 
       <p>
-        Your Interests
+        Interests: UX design, multimedia & graphic design, illustration, fashion, and music.
       </p>
 
       <br><br><br><br><br><br><br><br><br><br><br>
@@ -35,13 +36,13 @@
         <ul class="nav footer-nav">
           <li>
             <!-- YOUR GITHUB -->
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/antsquill" target="_blank">
               <img class="sm-logo" src="assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/antsquill/" target="_blank">
               <img class="sm-logo" src="assets/linkedinwhite.png" height="50" width="50">
 
             </a>
