--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="assets/headshot_image.jpg" height="200" width="200">
+      <img class="about-prof-image"
+      src="https://media-exp1.licdn.com/dms/image/C4D03AQEKdGYuFoe-7Q/profile-displayphoto-shrink_200_200/0/1648155995317?e=1673481600&v=beta&t=jJMjcV1Eb-MuJI7qFvAvwf_iz7_mkEuVUhomuHNwp78"
+      height="200" width="200">
       <p>
 
         Hello and welcome!! I'm Anthony, a third-year CS major at the University of Maryland.
